tests/machine/x/kotlin/right_join.error
line 40:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/right_join.kt:40:85: error: unresolved reference: id
            println(listOf("Customer", entry.customerName, "has order", entry.order.id, "- $", entry.order.total).joinToString(" "))
                                                                                    ^
/workspace/mochi/tests/machine/x/kotlin/right_join.kt:40:108: error: unresolved reference: total
            println(listOf("Customer", entry.customerName, "has order", entry.order.id, "- $", entry.order.total).joinToString(" "))
                                                                                                           ^

 39:         if (toBool(entry.order)) {
 40:             println(listOf("Customer", entry.customerName, "has order", entry.order.id, "- $", entry.order.total).joinToString(" "))
 41:         }
